--- a/index.html
+++ b/index.html
@@ -6,5 +6,36 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="css/main.css" rel="stylesheet">
 	</head>
+	<header>
+		<h1>Grains</h1>
+		<nav>
+			<ol>
+				<li>Intro</li>
+				<li>Cereals</li>
+				<li>Legumes</li>
+			</ol>
+		</nav>
+
+		<main>
+			<p>Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.<p>
+			<p>After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
+
+			<h2>Famous cereals</h2>
+				<ul>
+					<li>Corn</li>
+					<li>Rice</li>
+					<li>Oats</li>
+				</ul>
+
+			<h2>Famous legumes</h2>
+				<dl>
+					<dt>Peanuts</dt> <dd>— first cultivated in the valleys of Paraguay</dd>
+					<dt>Beans</dt> <dd>— a summer crop that needs warm temperatures</dd>
+					<dt>Lentils</dt> <dd>— an edible pulse from a bushy annual plant</dd>
+		</main>
+
+		<footer>
+			<p>© Grains.</p>
+		</footer>
 
 </html>
