--- a/index.html
+++ b/index.html
@@ -10,24 +10,41 @@
 		<h1>Grains</h1>
 		<nav>
 			<ol>
-				<li>Intro</li>
-				<li>Cereals</li>
-				<li>Legumes</li>
+				<li><a href="#intro">Intro</a></li>
+				<li><a href="#cereals">Cereals</a></li>
+				<li><a href="#legumes">Legumes</a></li>
 			</ol>
 		</nav>
 
 		<main>
-			<p>Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.<p>
+			<img src="img/grains.jpg" alt="Many kinds of grains at a market in bags">
+			<img src="img/cereals.jpg" alt="Four kinds of cereal grains in piles">
+			<img src="img/quinoa.jpg" alt="A close up of a pile of quinoa">
+			<p id="intro">Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.<p>
 			<p>After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
 
-			<h2>Famous cereals</h2>
-				<ul>
-					<li>Corn</li>
-					<li>Rice</li>
-					<li>Oats</li>
-				</ul>
+			<h2 id="cereals">Famous cereals</h2>
+			<figure>
+				<img src="img/corn.jpg" alt="A close up of a pile of corn">
+				<figcaption>Corn</figcaption>
+			</figure>
 
-			<h2>Famous legumes</h2>
+			<figure>
+				<img src="img/rice.jpg" alt="A close up of a pile of rice">
+				<figcaption>Rice</figcaption>
+			</figure>
+
+			<figure>
+				<img src="img/oats.jpg" alt"A close up of a pile of oats">
+				<figcaption>Oats</figcaption>
+			</figure>
+
+
+			<h2 id="legumes">Famous legumes</h2>
+				<img src="img/peanuts.jpg" alt="A close up of a pile of peanuts">
+				<img src="img/beans.jpg" alt="A close up of a pile of beans">
+				<img src="img/lentils.jpg" alt="A close up of a pile of lentils">
+
 				<dl>
 					<dt>Peanuts</dt> <dd>— first cultivated in the valleys of Paraguay</dd>
 					<dt>Beans</dt> <dd>— a summer crop that needs warm temperatures</dd>
