--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="css/main.css" rel="stylesheet">
 	</head>
+
 	<header>
 		<h1>Grains</h1>
 		<nav>
@@ -15,41 +16,45 @@
 				<li><a href="#legumes">Legumes</a></li>
 			</ol>
 		</nav>
+	</header>
 
-		<main>
-			<img src="img/grains.jpg" alt="Many kinds of grains at a market in bags">
-			<img src="img/cereals.jpg" alt="Four kinds of cereal grains in piles">
-			<img src="img/quinoa.jpg" alt="A close up of a pile of quinoa">
-			<p id="intro">Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.<p>
-			<p>After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
+	<main>
+		<img class= "grains" src="img/grains.jpg" alt="Many kinds of grains at a market in bags">
+		<img class= "cereals" src="img/cereals.jpg" alt="Four kinds of cereal grains in piles">
+		<img class= "quinoa" src="img/quinoa.jpg" alt="A close up of a pile of quinoa">
+		<p id="intro">Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.<p>
+		<p class="clear-left">After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
 
+		<div class="orange-background">
 			<h2 id="cereals">Famous cereals</h2>
 			<figure>
 				<img src="img/corn.jpg" alt="A close up of a pile of corn">
 				<figcaption>Corn</figcaption>
 			</figure>
 
-			<figure>
-				<img src="img/rice.jpg" alt="A close up of a pile of rice">
+			<figure class= "rice-oats">
+				<img class="rice" src="img/rice.jpg" alt="A close up of a pile of rice">
 				<figcaption>Rice</figcaption>
 			</figure>
 
-			<figure>
-				<img src="img/oats.jpg" alt"A close up of a pile of oats">
+			<figure class= "rice-oats">
+				<img class="oats" src="img/oats.jpg" alt"A close up of a pile of oats">
 				<figcaption>Oats</figcaption>
 			</figure>
+		</div>
 
 
-			<h2 id="legumes">Famous legumes</h2>
-				<img src="img/peanuts.jpg" alt="A close up of a pile of peanuts">
-				<img src="img/beans.jpg" alt="A close up of a pile of beans">
-				<img src="img/lentils.jpg" alt="A close up of a pile of lentils">
+		<h2 class=legumes id="legumes">Famous legumes</h2>
 
-				<dl>
-					<dt>Peanuts</dt> <dd>— first cultivated in the valleys of Paraguay</dd>
-					<dt>Beans</dt> <dd>— a summer crop that needs warm temperatures</dd>
-					<dt>Lentils</dt> <dd>— an edible pulse from a bushy annual plant</dd>
-		</main>
+			<dl>
+				<dt><img class= "peanuts" src="img/peanuts.jpg" alt="A close up of a pile of peanuts"> Peanuts </dt>
+					<dd>— first cultivated in the valleys of Paraguay</dd>
+				<dt><img class= "beans" src="img/beans.jpg" alt="A close up of a pile of beans"> Beans</dt>
+					<dd>— a summer crop that needs warm temperatures</dd>
+				<dt><img class= "lentils" src="img/lentils.jpg" alt="A close up of a pile of lentils"> Lentils</dt>
+					<dd>— an edible pulse from a bushy annual plant</dd>
+			</dl>
+	</main>
 
 		<footer>
 			<p>© Grains.</p>
