--- a/index.html
+++ b/index.html
@@ -8,37 +8,42 @@
 	</head>
 
 	<header>
-		<h1>Grains</h1>
+			<img class="logo-left" src="img/grain-left.svg" alt="Logo for grains">
+			<h1>Grains</h1>
+			<img class="logo-left" src="img/grain-right.svg" alt="Logo for grains">
+
 		<nav>
 			<ol>
-				<li><a href="#intro">Intro</a></li>
-				<li><a href="#cereals">Cereals</a></li>
+				<li class:"clear"><a href="#intro">Intro</a></li>
+				<li class="cereal-line"><a href="#cereals">Cereals</a></li>
 				<li><a href="#legumes">Legumes</a></li>
 			</ol>
 		</nav>
 	</header>
 
 	<main>
-		<img class= "grains" src="img/grains.jpg" alt="Many kinds of grains at a market in bags">
-		<img class= "cereals" src="img/cereals.jpg" alt="Four kinds of cereal grains in piles">
-		<img class= "quinoa" src="img/quinoa.jpg" alt="A close up of a pile of quinoa">
-		<p id="intro">Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.<p>
-		<p class="clear-left">After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
+		<div class="side-space">
+			<img class= "grains" src="img/grains.jpg" alt="Many kinds of grains at a market in bags">
+			<img class= "cereals" src="img/cereals.jpg" alt="Four kinds of cereal grains in piles">
+			<img class= "quinoa" src="img/quinoa.jpg" alt="A close up of a pile of quinoa">
+			<p id="intro">Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.<p>
+			<p class="clear-left">After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
+		</div>
 
 		<div class="orange-background">
 			<h2 id="cereals">Famous cereals</h2>
-			<figure>
-				<img src="img/corn.jpg" alt="A close up of a pile of corn">
+			<figure class="corn-image">
+				<img class="no" src="img/corn.jpg" alt="A close up of a pile of corn">
 				<figcaption>Corn</figcaption>
 			</figure>
 
 			<figure class= "rice-oats">
-				<img class="rice" src="img/rice.jpg" alt="A close up of a pile of rice">
+				<img class="rice no" src="img/rice.jpg" alt="A close up of a pile of rice">
 				<figcaption>Rice</figcaption>
 			</figure>
 
-			<figure class= "rice-oats">
-				<img class="oats" src="img/oats.jpg" alt"A close up of a pile of oats">
+			<figure class= "rice-oats no">
+				<img class="oats no" src="img/oats.jpg" alt"A close up of a pile of oats">
 				<figcaption>Oats</figcaption>
 			</figure>
 		</div>
