--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	<main>
 		<div class="side-space">
 			<img class= "grains" src="img/grains.jpg" alt="Many kinds of grains at a market in bags">
+			<p id="intro">Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.<p>
 			<img class= "cereals" src="img/cereals.jpg" alt="Four kinds of cereal grains in piles">
 			<img class= "quinoa" src="img/quinoa.jpg" alt="A close up of a pile of quinoa">
-			<p id="intro">Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.<p>
 			<p class="clear-left">After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
 		</div>
 
@@ -52,13 +52,10 @@
 
 		<h2 class=legumes id="legumes">Famous legumes</h2>
 
-			<dl>
-				<dt><img class= "peanuts" src="img/peanuts.jpg" alt="A close up of a pile of peanuts"> Peanuts </dt>
-					<dd>— first cultivated in the valleys of Paraguay</dd>
-				<dt><img class= "beans" src="img/beans.jpg" alt="A close up of a pile of beans"> Beans</dt>
-					<dd>— a summer crop that needs warm temperatures</dd>
-				<dt><img class= "lentils" src="img/lentils.jpg" alt="A close up of a pile of lentils"> Lentils</dt>
-					<dd>— an edible pulse from a bushy annual plant</dd>
+			<ul>
+				<li><img class= "peanuts" src="img/peanuts.jpg" alt="A close up of a pile of peanuts"><em><strong>Peanuts</strong> — first cultivated in the valleys of Paraguay</em></li>
+				<li><img class= "beans" src="img/beans.jpg" alt="A close up of a pile of beans"><em><strong>Beans</strong> — a summer crop that needs warm temperatures</em></li>
+				<li><img class= "lentils" src="img/lentils.jpg" alt="A close up of a pile of lentils"><em><strong>Lentils</strong> — an edible pulse from a bushy annual plant</em></li>
 			</dl>
 	</main>
 
