Ran through validator, fixed any css/html errors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Grains</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale= 1">
 		<link href="css/main.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700' rel='stylesheet' type='text/css'>
 	</head>
@@ -15,7 +15,7 @@
 
 		<nav>
 			<ol>
-				<li class:"clear"><a href="#intro">Intro</a></li>
+				<li class="lear"><a href="#intro">Intro</a></li>
 				<li class="cereal-line"><a href="#cereals">Cereals</a></li>
 				<li><a href="#legumes">Legumes</a></li>
 			</ol>
@@ -44,7 +44,7 @@
 			</figure>
 
 			<figure class= "rice-oats no">
-				<img class="oats no" src="img/oats.jpg" alt"A close up of a pile of oats">
+				<img class="oats no" src="img/oats.jpg" alt="A close up of a pile of oats">
 				<figcaption>Oats</figcaption>
 			</figure>
 		</div>
@@ -56,7 +56,7 @@
 				<li><img class= "peanuts" src="img/peanuts.jpg" alt="A close up of a pile of peanuts"><em><strong>Peanuts</strong> — first cultivated in the valleys of Paraguay</em></li>
 				<li><img class= "beans" src="img/beans.jpg" alt="A close up of a pile of beans"><em><strong>Beans</strong> — a summer crop that needs warm temperatures</em></li>
 				<li><img class= "lentils" src="img/lentils.jpg" alt="A close up of a pile of lentils"><em><strong>Lentils</strong> — an edible pulse from a bushy annual plant</em></li>
-			</dl>
+			</ul>
 	</main>
 
 		<footer>
